# DevOps-Course-Starter

./: .dockerignore  .env.template  .env.test  .gitignore  Dockerfile  README.md  Vagrantfile  app.py  appserver.py  board.py  gunicorn.conf.py  pyproject.toml  requirements.txt  session_items.py  test_integration.py  test_selenium.py  test_vew_model.py  todo_item.py  trello_config.py  view_model.py
js/: todo.js  todo.min.js
templates/: card.html  index.html  layout.html
